Fix audit findings: JDK 8 crash, deployment bugs, and remote HTTPS support
- Guard --add-opens flags with JDK 9+ check to prevent crash on JDK 8
- Fix double port parsing in TomcatSettingsSection.applyTo()
- Fix isDeploymentCompleted() returning false for zero-artifact configs
- Consolidate duplicate resolveJdk() into shared resolveJdkOrNull()
- Add HTTPS toggle for Remote Manager connection URL
- Add isModified() and context path uniqueness validation to deployment tab
- Normalize context paths before duplicate check in addDeployment()
- Remove wasteful updateDeployedFlags() from selection change handler